design some parts of my code

--- a/zadanie-1.html
+++ b/zadanie-1.html
@@ -10,9 +10,11 @@
 <body>
   <header>
     <h1>Форма регистрации на сайте</h1>
-    <!--<nav>
-      <a href="#" title="На главную">На главную</a>
-    </nav>-->
+    <!--
+     <nav>
+       <a href="#" title="На главную">На главную</a>
+     </nav>
+    -->
   </header>
   <main>
     <article class="c1">
