--- a/zadanie-1.html
+++ b/zadanie-1.html
@@ -7,7 +7,7 @@
   <title>Использование веб-форм на сайте</title>
   <link rel="stylesheet" href="css/style1.css">
 </head>
-<body>
+<body >
   <header>
     <h1>Форма регистрации на сайте</h1>
     <!--
@@ -20,17 +20,18 @@
     <article class="c1">
       <h2>Добро пожаловать на наш сайт!</h2>
        <form action="/signup" method="POST">
+        <legend>Для регистрации введите свои данные:</legend>
         <fieldset class="account-info">
-          <label>Имя</label>
+          <label><b>Имя</b></label>
           <input type="text" name="first_name">
-          <label>Фамилия</label>
+          <label><b>Фамилия</b></label>
           <input type="text" name="last_name">
-          <label>Email</label>
-          <input type="text" required="required" class="email notnull">
-          <label>Телефон</label>
+          <label><b>Email</b></label>
+          <input type="text" required="required" class="email">
+          <label class="phone"><b>Телефон</b></label>
           <input type="text" name="phone" required="required" class="notnull"
             placeholder="+375 (код оператора) 111-11-11">
-          <label>Страна</label>
+          <label class="country"><b>Страна</b></label>
             <select name="country">
               <option>Беларусь</option>
               <option>Россия</option>
@@ -41,19 +42,20 @@
               <option>Эстония</option>
               <option>США</option>
             </select>
-          <label>Пароль</label>
+          <label class="password"><b>Пароль</b></label>
           <input type="password" name="password">
-          <label>Подтвердите пароль</label>
-          <input type="password" name="password_confirm">
+          <label class="password2"><b>Подтвердите пароль</b></label>
+          <input type="password2" name="password_confirm">
           
         </fieldset>
         <fieldset class="account-action">
           <label><input type="checkbox" name="ww_submit_confirm">&nbsp;Отметьте для подтверждения согласия <a
               href="/подключение/правила-использования-услуги" target="_blank" rel="noopener">с правилами использования
-              услуги</a></label>
-              <label><input type="checkbox" name="ww_submit_confirm">&nbsp;Отметьте для согласия на обработку персональных данных в
+              услуги</a></label><br>
+              <label><input type="checkbox" name="ww_submit_confirm">&nbsp;Отметьте для согласия на обработку персональных <br> данных в
                 соответствии с <a href="/соглашение-об-обработке-персональных-данных" target="_blank" rel="noopener">Соглашением об
-                  обработке персональных данных</a></label>
+                  обработке <br> персональных данных</a></label>
+                  <br>
           <input class="btn" type="submit" name="submit" value="Зарегистрироваться">
           </fieldset>
       </form>
@@ -63,7 +65,7 @@
     </aside>-->
   </main>
   <footer class="foot">
-  &#169; 2021, Официальный сайт Иванова Ивана Ивановича
+  &#169; 2024, Официальный сайт Егорченко Валерии Сергеевны
   </footer>
 </body>
 </html>
