--- a/zadanie-1.html
+++ b/zadanie-1.html
@@ -9,7 +9,7 @@
 </head>
 <body >
   <header>
-    <h1>Форма регистрации на сайте</h1>
+    <h1><b>Форма регистрации на сайте</b></h1>
     <!--
      <nav>
        <a href="#" title="На главную">На главную</a>
@@ -18,7 +18,7 @@
   </header>
   <main>
     <article class="c1">
-      <h2>Добро пожаловать на наш сайт!</h2>
+      <h2><b>Добро пожаловать на наш сайт!</b></h2>
        <form action="/signup" method="POST">
         <legend>Для регистрации введите свои данные:</legend>
         <fieldset class="account-info">
