--- a/index4.html
+++ b/index4.html
@@ -70,14 +70,14 @@
               <option>Рига</option>  
             </select>
   </form>
-  <p class="asd">Город, где вы учились в школе или вузе:</p>
+  <p class="asd"><b>Город, где вы учились в школе или вузе:</b></p>
   
   <h3>Школа</h3>
   <div class="line3"></div>
   <form>
     <label class="school">Школа:</label>
             <select name="school">
-              <option>-Выберите школу-</option>
+              <option>- Выберите школу -</option>
               <option>СШ №1</option>
               <option>СШ №2</option>
               <option>Гимназия №1</option>
@@ -88,9 +88,9 @@
   <h4>Университет</h4>
   <div class="line3"></div>
   <form>
-    <label class="University">ВУЗ:</label>
+    <label class="University">Вуз:</label>
             <select name="University">
-              <option>-Выберите ВУЗ-</option>
+              <option>- Выберите ВУЗ -</option>
               <option>БГУ</option>
               <option>БГУИР</option>
               <option>ГБНТУ</option>
