--- a/index4.html
+++ b/index4.html
@@ -21,7 +21,7 @@
   </div>
   <main>
   <h2>Имя</h2>
-  <div class="line"></div>
+  <div class="line2"></div>
   <form action="" method="post">
     <div class="field">
       <label>Имя:</label>
@@ -43,7 +43,7 @@
     </div>
         
   </form>
-  <h2>Образование</h2>
+  <h2 class="education">Образование</h2>
   <div class="line"></div>
   <form>
     <label class="country">Страна:</label>
@@ -56,6 +56,7 @@
               <option>Латвия</option>
               <option>Эстония</option>
               <option>США</option>
+              <option>Сейшельские Острова</option>
             </select>    
   </form>
   
@@ -67,13 +68,14 @@
               <option>Киев</option>
               <option>Варшава</option>
               <option>Вильнюс</option>
-              <option>Рига</option>  
+              <option>Рига</option> 
+              <option>Каменец - Подольский</option> 
             </select>
   </form>
-  <p class="asd"><b>Город, где вы учились в школе или вузе:</b></p>
+  <p class="asd"><b>Город, где Вы учились в школе или вузе:</b></p>
   
-  <h3>Школа</h3>
-  <div class="line3"></div>
+  <h3><b>Школа</b></h3>
+  <div class="line"></div>
   <form>
     <label class="school">Школа:</label>
             <select name="school">
@@ -81,12 +83,13 @@
               <option>СШ №1</option>
               <option>СШ №2</option>
               <option>Гимназия №1</option>
-              <option>Гимназия №2</option>  
+              <option>Гимназия №2</option> 
+              <option>СШ №4 им. Ф.Скорины</option>  
             </select>
   </form>
 
-  <h4>Университет</h4>
-  <div class="line3"></div>
+  <h4><b>Университет</b></h4>
+  <div class="line"></div>
   <form>
     <label class="University">Вуз:</label>
             <select name="University">
@@ -94,11 +97,12 @@
               <option>БГУ</option>
               <option>БГУИР</option>
               <option>ГБНТУ</option>
-              <option>БГАИ</option>  
+              <option>БГАИ</option> 
+              <option>МГТУ им.Н.Э.Баумана</option> 
             </select>
   </form>
   <input class="btn" type="submit" name="submit" value="Зарегистрироваться">
-  <p class="qwe">Фактом регистрации вы соглашаетесь с
+  <p class="qwe">Фактом регистрации Вы соглашаетесь с
   <a href="/пользовательским соглашение" target="_blank" rel="noopener">Пользовательским соглашением</a></p>
 
   </main>
